[gd_scene load_steps=9 format=3 uid="uid://q8omu805nyq6"]

[ext_resource type="Script" uid="uid://b5fa62423ki6c" path="res://script/Main.gd" id="1_l66d7"]
[ext_resource type="PackedScene" uid="uid://xxotxrqtbx5p" path="res://bird.tscn" id="1_lqr42"]
[ext_resource type="Texture2D" uid="uid://b7h8m2i0nmy46" path="res://pictures/BG.png" id="2_bis1l"]
[ext_resource type="PackedScene" uid="uid://dtlo6joggcmlf" path="res://level_score_ui.tscn" id="4_1off3"]
[ext_resource type="PackedScene" uid="uid://b6iarc3dc12h4" path="res://restart_ui.tscn" id="4_xcnan"]
[ext_resource type="AudioStream" uid="uid://cwmp77tr52333" path="res://music/GameBGM.mp3" id="5_d42w0"]
[ext_resource type="AudioStream" uid="uid://d2i4p5jhjri3k" path="res://music/GameLose.mp3" id="7_0rkna"]
[ext_resource type="AudioStream" uid="uid://73thu4388rhs" path="res://music/GameWin.mp3" id="8_q4h4n"]

[node name="Main" type="Node2D"]
script = ExtResource("1_l66d7")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_bis1l")

[node name="Bird" parent="." instance=ExtResource("1_lqr42")]
position = Vector2(128, 300)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(128, 300)

[node name="CreateRockTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="GameSuccessWaitTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="UpdateLevelWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="RockUp" type="Node2D" parent="."]

[node name="RockDown" type="Node2D" parent="."]

[node name="BugNode" type="Node2D" parent="."]

[node name="LevelScoreUI" parent="." instance=ExtResource("4_1off3")]

[node name="RestartUI" parent="." instance=ExtResource("4_xcnan")]

[node name="AudioGameBGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_d42w0")
autoplay = true
parameters/looping = true

[node name="AudioGameLose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0rkna")

[node name="AudioGameWin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_q4h4n")

[connection signal="body_entered" from="Bird" to="." method="_on_bird_body_entered"]
[connection signal="timeout" from="CreateRockTimer" to="." method="_on_create_rock_timer_timeout"]
[connection signal="timeout" from="GameSuccessWaitTimer" to="." method="_on_game_success_wait_timer_timeout"]
[connection signal="timeout" from="UpdateLevelWaitTimer" to="." method="_on_update_level_wait_timer_timeout"]
[connection signal="start_game" from="RestartUI" to="." method="_on_restart_ui_start_game"]
